--- a/RPSServer/TestRPSServer/TestRPSServer.csproj
+++ b/RPSServer/TestRPSServer/TestRPSServer.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Player.cs" />
+    <Compile Include="Constants\Constants.cs" />
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Processor\Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\Response.cs" />
+    <Compile Include="SocketHelper\SocketHelper.cs" />
     <Compile Include="TcpServer.cs" />
   </ItemGroup>
   <ItemGroup>
