--- a/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Guna.UI2, Version=2.0.1.4, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.1.4\lib\net40\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="RPSMessage">
+      <HintPath>..\..\RPSServer\RPSMessage\bin\Debug\RPSMessage.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +60,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketHelper\SocketHelper.cs" />
     <Compile Include="TcpClients.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
