--- a/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
@@ -39,6 +39,9 @@
     <Reference Include="RPSMessage">
       <HintPath>..\..\RPSServer\RPSMessage\bin\Debug\RPSMessage.dll</HintPath>
     </Reference>
+    <Reference Include="SharedClasses">
+      <HintPath>..\..\RPSServer\SharedClasses\bin\Debug\SharedClasses.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,8 +61,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Processor\Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\Response.cs" />
     <Compile Include="SocketHelper\SocketHelper.cs" />
     <Compile Include="TcpClients.cs" />
     <EmbeddedResource Include="Form1.resx">
