add send gameInfo

--- a/RPSServer/TestRPSServer/TestRPSServer.csproj
+++ b/RPSServer/TestRPSServer/TestRPSServer.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Processor\Processor.cs" />
     <Compile Include="Program.cs" />
