--- a/RPSServer/TestRPSServer/TestRPSServer.csproj
+++ b/RPSServer/TestRPSServer/TestRPSServer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responses\Response.cs" />
     <Compile Include="SocketHelper\SocketHelper.cs" />
+    <Compile Include="Store\TemporaryStorage.cs" />
     <Compile Include="TcpServer.cs" />
   </ItemGroup>
   <ItemGroup>
