--- a/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Processor\Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\GameInfo.cs" />
     <Compile Include="Response\Response.cs" />
     <Compile Include="SocketHelper\SocketHelper.cs" />
     <Compile Include="TcpClients.cs" />
