add config file

--- a/RPSServer/TestRPSServer/TestRPSServer.csproj
+++ b/RPSServer/TestRPSServer/TestRPSServer.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configs\Config.cs" />
+    <Compile Include="Configs\INIFile.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Processor\Processor.cs" />
