--- a/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors/RockPaperScissors.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configs\Config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +70,7 @@
     <Compile Include="Response\Response.cs" />
     <Compile Include="SocketHelper\SocketHelper.cs" />
     <Compile Include="TcpClients.cs" />
+    <Compile Include="Utils\INIFile.cs" />
     <Compile Include="Utils\openAppWindow.cs" />
     <Compile Include="Views\Form_Lose.cs">
       <SubType>Form</SubType>
